# esp32-file-system

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
components/esp_bsp_generic/src/: esp_bsp_generic.c
components/file_browser/: CMakeLists.txt  Kconfig  Kconfig.projbuild  file_browser.c  fs_navigator.c  fs_text_ops.c  settings.c  text_editor_screen.c  text_viewer_screen.c
components/file_browser/include/: file_browser.h  fs_navigator.h  fs_text_ops.h  settings.h  text_editor_screen.h  text_viewer_screen.h
components/file_manager/: CMakeLists.txt  file_manager.c  fs_text_ops.c  text_viewer_screen.c
components/file_manager/include/: file_manager.h  fs_navigator.h  text_viewer_screen.h
components/fonts/: CMakeLists.txt  Domine_14.c  Domine_14.h
components/image_viewer/: CMakeLists.txt  jpg.c  jpg_handler.c
components/image_viewer/include/: jpg.h  jpg_handler.h
components/sd_card/: CMakeLists.txt  sd_card.c
components/sd_card/include/: sd_card.h
components/settings/: CMakeLists.txt  settings.c
components/settings/include/: settings.h
components/styles/: styles.c
components/styles/include/: styles.h
components/touch_xpt2046/: CMakeLists.txt  Kconfig  Kconfig.projbuild  calibration_xpt2046.c  touch_xpt2046.c
components/touch_xpt2046/include/: calibration_xpt2046.h  touch_xpt2046.h
main/: CMakeLists.txt  calibration_ui.c  calibration_ui.h  calibration_xpt2046.c  esp32-file-display.c  file_browser.c  fs_navigator.c  fs_text_ops.c  idf_component.yml  main.c  text_editor_screen.c  text_viewer_screen.c  touch_xpt2046.c  touch_xpt2046.h  ui.c  ui.h
main/include/: calibration_xpt2046.h  file_browser.h  fs_navigator.h  fs_text_ops.h  text_editor_screen.h  text_viewer_screen.h  touch_xpt2046.h
third_party_components/esp_bsp_generic/: idf_component.yml
